# libxom

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  demo.c  xom  xom.h
libxom/: CMakeLists.txt  libxom.c
modxom/: CMakeLists.txt  Kbuild  modxom.c  modxom.h
